fix: set z-index in table of weather

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -389,6 +389,10 @@ a {
     @@ACCORDION
 
 \*============================================================================*/
+.accordion {
+  z-index: 100;
+}
+
 .card {
   background-color: rgba(0, 0, 0, .4);
   border: none;
